--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 				<div id="first"></div>
 				<div id="second"></div>
 				<div id="third"></div>
+				<div id="forth"></div>
 			</div>
 			<div class="banner">
 				<span class="button"><a href="#first">1</a></span>
